--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,34 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+# ---> Go
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
+*.o
+*.a
+
+# Folders
+_obj
+_test
+
+# Architecture specific extensions/prefixes
+*.[568vq]
+[568vq].out
+
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+
+_testmain.go
+
+*.prof
+
+bin/bi
+bin/logs
+prof
+apidoc
+.idea
+.idea/workspace.xml
+docs/node_modules
+*.iml
